# esp_s3_eye_lvgl

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  pytest_blink.py  sdkconfig  sdkconfig.old
SquareLine_project/: .gitignore  1.c  SquareLine_Project.sll  SquareLine_Project.spj  SquareLine_Project_events.py  tempCodeRunnerFile.c
SquareLine_project/assets/: ui_font_songtibpp4.c  ui_font_songtibpp4.fcfg
SquareLine_project/c/: CMakeLists.txt  ui.c  ui.h  ui_events.c  ui_events.h
SquareLine_project/c/images/: ui_img_333_png.c
SquareLine_project/c/screens/: ui_Screen1.c  ui_Screen2.c  ui_Screen3.c
components/cmd_esp32/: CMakeLists.txt  Kconfig.projbuild  cmd_esp32.c  cmd_esp32.h
components/cmd_esp32/cmd_sub/: cmd_decl.h  cmd_system.c  cmd_system.h
components/keys/: CMakeLists.txt  key.cpp
components/keys/include/: key.hpp
components/lvgl/: lv_conf copy.h  lv_conf.h  lvgl.h
components/lvgl/env_support/cmake/: esp.cmake
components/lvgl/src/: lv_conf_internal.h  lvgl.h
components/lvgl_esp32_drivers/: CMakeLists.txt  lvgl_helpers.h  lvgl_spi_conf.h
components/lvgl_esp32_drivers/lvgl_tft/: esp_lcd_backlight.c  ili9341.c  st7789.c
components/lvgl_porting/: CMakeLists.txt  lv_port_disp.c  lv_port_fs.c  lv_port_indev.c
components/lvgl_porting/include/: lv_port_fs.h  lv_port_indev.h
components/main_cpp/: CMakeLists.txt  main_cpp.cpp
components/main_cpp/include/: main_cpp.hpp
components/my_tinyUSB/: CMakeLists.txt  MyTinyUSB.c
components/my_tinyUSB/include/: MyTinyUSB.h
components/my_ui/: CMakeLists.txt  test_ui.c
components/my_ui/include/: astro100.c  astro200.c  astro50.c  songti.c  test_ui.h  xxxx.c
components/my_wifi/: CMakeLists.txt  my_wifi.c  myota.c  to_time.c
components/my_wifi/include/: my_wifi.h  to_time.h
components/qma7981/: CMakeLists.txt  qma7981.c
components/qma7981/include/: qma7981.h
components/sd_fs/: CMakeLists.txt  MyTinyUSB_test.c  sd_fat_fs.c
components/sd_fs/include/: sd_fat_fs.h
components/squareline_ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h
components/squareline_ui/components/: ui_comp_hook.c
components/squareline_ui/fonts/: ui_font_Font1.c  ui_font_songtibpp4.c
components/squareline_ui/images/: ui_img_333_png.c
components/squareline_ui/screens/: ui_Screen1.c  ui_Screen2.c  ui_Screen3.c  ui_Screen4.c  ui_Screen5.c
main/: CMakeLists.txt  blink_example_main.c  idf_component.yml  main.c  sd_card_littlefs_temp.c
script/: json2arry.py  json_data.c
test/: 1.c
