# file(GLOB_RECURSE SOURCES 	./*.c
# 							cmd_sub/*.c )

# idf_component_register(SRCS	${SOURCES}
#                    INCLUDE_DIRS .
# 								./cmd_sub
#                     REQUIRES    
# 								console 
#                                 nvs_flash
#                                 spi_flash
# 								fatfs
# 								)
